--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ section{
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background:url(/images/bgl.jpg) no-repeat;
+    background:url(https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/bgl.jpg) no-repeat;
 background-size: cover;
 background-position: center;
 background-attachment: fixed;
@@ -396,7 +396,7 @@ background-attachment: fixed;
         min-height: 100vh;
         display: flex;
         align-items: center;
-        background:url(/images/bgS.jpg) no-repeat;
+        background:url(https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/bgS.jpg) no-repeat;
         background-size: auto 100%;
         background-position:65% 12% ;
     background-attachment: fixed;
@@ -459,7 +459,7 @@ background-attachment: fixed;
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background:url(/images/bgXs.jpg) no-repeat;
+    background:url(https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/bgXs.jpg) no-repeat;
     background-size: auto 100%;
     background-position:45% 12% ;
 background-attachment: fixed;
