--- a/style.css
+++ b/style.css
@@ -382,7 +382,7 @@ background-attachment: fixed;
 
 
 
-@media(max-width:741px){
+@media(max-width:769px){
     body{
         font-size: 13px;
     }
@@ -444,17 +444,6 @@ background-attachment: fixed;
     .skills .card{
       
     width: 160px  ;  /* test for responsive*/
-}}
-
-
-@media(max-width:390px){
-     body{
-        font-size: 10px;
-    }
-    
-    .skills .card{
-      
-    width: 150px  ;  /* test for responsive*/
 }
 
 .main{
@@ -463,27 +452,23 @@ background-attachment: fixed;
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background:url(https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/bgS.jpg) no-repeat;
+    background:url(/https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/bgXs.jpg) no-repeat;
     background-size: auto 100%;
     background-position:75% 0% ;
 background-attachment: fixed;
 
 }
-@media(max-width:190px){
-
-.main{
-        
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    background:url(/images/bgXs.jpg) no-repeat;
-    background-size: auto 100%;
-    background-position:95% 0% ;
-background-attachment: fixed;
 
 }
 
+
+@media(max-width:390px){
+    
+    .skills .card{
+      
+    width: 150px  ;  /* test for responsive*/
 }
 }
+
+
 
