--- a/style.css
+++ b/style.css
@@ -452,7 +452,7 @@ background-attachment: fixed;
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background:url(/https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/bgXs.jpg) no-repeat;
+    background:url(https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/bgXs.jpg) no-repeat;
     background-size: auto 100%;
     background-position:75% 0% ;
 background-attachment: fixed;
