--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ section{
     background:url(https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/bgl.jpg) no-repeat;
 background-size: cover;
 background-position: center;
-background-attachment: fixed;
+/* background-attachment: fixed; */
 
 }
 
@@ -392,14 +392,11 @@ background-attachment: fixed;
 
     .main{
         
-        width: 100%;
-        min-height: 100vh;
-        display: flex;
-        align-items: center;
+      
         background:url(https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/bgS.jpg) no-repeat;
         background-size: auto 100%;
         background-position:65% 5% ;
-    background-attachment: fixed;
+/*     background-attachment: fixed; */
     
     }
     .logo{
@@ -448,14 +445,11 @@ background-attachment: fixed;
 
 .main{
         
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
+   
     background:url(https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/bgXs.jpg) no-repeat;
     background-size: auto 100%;
     background-position:75% 0% ;
-background-attachment: fixed;
+/* background-attachment: fixed; */
 
 }
 
