--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ section{
     background:url(https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/bgl.jpg) no-repeat;
 background-size: cover;
 background-position: center;
-/* background-attachment: fixed; */
+background-attachment: fixed;
 
 }
 
@@ -396,7 +396,9 @@ background-attachment: fixed;
         background:url(https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/bgS.jpg) no-repeat;
         background-size: auto 100%;
         background-position:65% 5% ;
-/*     background-attachment: fixed; */
+            -webkit-background-size: auto 100%;
+        -webkit-background-position: 65% 0%;
+    background-attachment: fixed;
     
     }
     .logo{
@@ -449,7 +451,9 @@ background-attachment: fixed;
     background:url(https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/bgXs.jpg) no-repeat;
     background-size: auto 100%;
     background-position:75% 0% ;
-/* background-attachment: fixed; */
+        -webkit-background-size: auto 100%;
+        -webkit-background-position: 75% 0%;
+background-attachment: fixed;
 
 }
 
